samples/bad/bad005.lat
// Function with no type
foo() {}
